--- a/project/v2.yaml
+++ b/project/v2.yaml
@@ -1,19 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
+  name: my-app-canary
+  labels:
+    app: my-app
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
-      app: nginx
+      app: my-app
+      version: v2
   template:
     metadata:
       labels:
-        app: nginx
+        app: my-app
+        version: v2
     spec:
       containers:
-      - name: nginx
+      - name: my-app
         image: nginx:1.21
         ports:
         - containerPort: 80
